fix: Update Alternative Destribution

--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/AlternativeLinecom.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/AlternativeLinecom.xcscheme
@@ -15,9 +15,9 @@
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8CA60BBB2BB6D5DC005E59B0"
-               BuildableName = "Alternative Destribution Build"
-               BlueprintName = "Alternative Destribution Build"
+               BlueprintIdentifier = "8C82F79A2BB6F859009AEFD2"
+               BuildableName = "AlternativeLinecom.app"
+               BlueprintName = "AlternativeLinecom"
                ReferencedContainer = "container:DarockBili.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -31,7 +31,7 @@
       shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Alternative"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -40,6 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8C82F79A2BB6F859009AEFD2"
+            BuildableName = "AlternativeLinecom.app"
+            BlueprintName = "AlternativeLinecom"
+            ReferencedContainer = "container:DarockBili.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -50,9 +60,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8CA60BBB2BB6D5DC005E59B0"
-            BuildableName = "Alternative Destribution Build"
-            BlueprintName = "Alternative Destribution Build"
+            BlueprintIdentifier = "8C82F79A2BB6F859009AEFD2"
+            BuildableName = "AlternativeLinecom.app"
+            BlueprintName = "AlternativeLinecom"
             ReferencedContainer = "container:DarockBili.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
