--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/MeowBili.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/MeowBili.xcscheme
@@ -26,11 +26,11 @@
       </PostActions>
       <BuildActionEntries>
          <BuildActionEntry
-            buildForTesting = "YES"
+            buildForTesting = "NO"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
+            buildForProfiling = "NO"
             buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8CA7CBBF2B77AC4A008E587F"
@@ -104,8 +104,7 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8CA7CBBF2B77AC4A008E587F"
@@ -113,13 +112,13 @@
             BlueprintName = "MeowBili"
             ReferencedContainer = "container:DarockBili.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Alternative"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
