--- a/ExportOptions/app-store.plist
+++ b/ExportOptions/app-store.plist
@@ -13,7 +13,7 @@
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
-	<string>B57D8PP775</string>
+	<string>B38QUJMY47</string>
 	<key>thinning</key>
 	<string>&lt;none&gt;</string>
 </dict>
