--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/MeowBili.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/MeowBili.xcscheme
@@ -118,7 +118,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Alternative"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
