chore!: Removed support of watchOS 9.x

--- a/MeowBili/Info.plist
+++ b/MeowBili/Info.plist
@@ -20,6 +20,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>BiliFont.ttf</string>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
