--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -14,6 +14,7 @@ disabled_rules:
   - for_where
   - legacy_constant
   - non_optional_string_data_conversion
+  - optional_data_string_conversion
 
 opt_in_rules:
   - attributes
