初步实现Widget与完善英语翻译
这个提交是作为#409的延续提交的，处理了#409提交时所提及的问题，并且继续完善了英语翻译

--- a/MeowBili/Info.plist
+++ b/MeowBili/Info.plist
@@ -12,6 +12,14 @@
 				<string>drkbili</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>meowbili</string>
+			</array>
+		</dict>
 	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
