--- a/.github/workflows/status-check.yml
+++ b/.github/workflows/status-check.yml
@@ -40,7 +40,7 @@ jobs:
           ref: ${{ inputs.psha }}
         
       - name: Set Xcode Version
-        run: sudo xcode-select -s /Applications/Xcode_16.app
+        run: sudo xcode-select -s /Applications/Xcode.app
 
       - name: Get Current Time
         id: current-time
