--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/MeowBili.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/MeowBili.xcscheme
@@ -59,7 +59,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Atlantic75 Alternative"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       language = "zh-Hans"
